# api-design

./: .gitignore  README.md  app.db  common.py  create_pokemon_db.py  db.py  graphql_api.py  pokeapi_graphql_api.py  pyproject.toml  rest_api.py  schema.graphql
routers/: __init__.py  v1.py  v2.py
