[project]
name = "api-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi[standard]>=0.139.1",
    "pydantic>=2.13.4",
    "sqlmodel>=0.0.39",
    "strawberry-graphql[cli]>=0.321.0",
]
